mx53_pcba.c modification is associated w/ Huawei PCBA new IO board, especially the differences between J1701 and J1702.     ha2605.c modification is associated w/ Huawei PCBA new IO board w/ different Touch Key layout.     goodix_touch.c modification is associated w/ Huawei PCBA new IO board w/ different layout.     Kconfig and Makefile modification add CONFIG_AT070TN93 and CONFIG_AT070TN2_WSVGA config items in Linux kernel to accommodate these 2 kind of IO board. For switch config, just edit Kconfig to set one of these 2 items to be 'y', and the other to be 'n'.     mxc_ipuv3_fb.c modification is associated w/ LVDS panel and RGB panel compatible suspend/resume, early-suspend/late-resume operations.

--- a/drivers/video/mxc/Makefile
+++ b/drivers/video/mxc/Makefile
@@ -1,6 +1,11 @@
 obj-$(CONFIG_FB_MXC_TVOUT_TVE)             	+= tve.o
 obj-$(CONFIG_FB_MXC_SII9232)                    += sii_92326_api.o sii_92326_driver.o mhl_i2c.o
+ifeq ($(CONFIG_AT070TN2_WSVGA), y)
 obj-$(CONFIG_FB_MXC_LDB)			+= ldb.o
+endif
+ifeq ($(CONFIG_AT070TN93), y)
+obj-$(CONFIG_AT070TN93)				+=
+endif
 obj-$(CONFIG_FB_MODE_HELPERS)			+= mxc_edid.o mxc_ddc.o
 ifeq ($(CONFIG_ARCH_MX21)$(CONFIG_ARCH_MX27)$(CONFIG_ARCH_MX25),y)
 	obj-$(CONFIG_FB_MXC_TVOUT)              += fs453.o
